Made it possible to change language. Added some Norwegian translation.

--- a/strings_en.ini
+++ b/strings_en.ini
@@ -16,7 +16,9 @@ help_description=
     \tteller transfer <#|name|no> <#|name|no> <amount> [message]   Transfer from account to account with amount and message.
 
     Options:
-    \t-h --help           Show this text.
-    \t-v --version        Show version.
-    \t-a --anon[ymize]    Replace all account numbers and balances. 
+    \t-h --help                      Show this text.
+    \t-v --version                   Show version.
+    \t-l=<lang> --lang=<lang>        Change language.
+    \t-a --anon[ymize]               Replace all account numbers and balances. 
     \t
+error_specify_language=Error: You need to specify which language to use.
