--- a/strings_no.ini
+++ b/strings_no.ini
@@ -1,2 +1,11 @@
 [language]
-first_run_message=Hei
+first_run_message=Hei der! 😀 🏦 
+    La oss starte! For å bruke denne kommando-linje-bankfusjonæren må du opprette en applikasjon på https://sbanken.no/utviklerportalen og legge til dataene her.
+welcome_back=Hei der! 😀 🏦 
+enter_client_id=Skriv inn klient-ID og trykk <enter>: 
+enter_client_secret=Skriv inn klient-hemmelighet og trykk <enter>: 
+enter_user_id=Skriv inn bruker-ID og trykk <enter>: 
+password_or_pin_if_you_want_to_store_data=Hvis du ønsker å lagre disse dataene kan du skrive inn  et passord som brukes til å kryptere innloggingsinformasjon. La det stå tomt for å ikke lagre noe.
+enter_password=Skriv inn passord og trykk <enter> (minst 6 tegn): 
+enter_password_2=Skriv inn passord og trykk <enter>: 
+
