--- a/config-example.ini
+++ b/config-example.ini
@@ -1,7 +1,7 @@
 [config]
-language=no
+language = no
 
 [sbanken]
-clientId = 'get your API key from sbanken.no'
-clientSecret = 'get your API secret from sbanken.no'
-userId = 'enter your user id (social security number)'
+clientId = get your API key from sbanken.no
+clientSecret = get your API secret from sbanken.no
+userId = enter your user id (social security number)
