Reusing access token between runs. Dictionary now supports arguments.

--- a/strings_en.ini
+++ b/strings_en.ini
@@ -22,3 +22,4 @@ help_description=
     \t-a --anon[ymize]               Replace all account numbers and balances. 
     \t
 error_specify_language=Error: You need to specify which language to use.
+error_failed_to_authenticate=Error: Failed to authenticate. Got back error code [%%s] and message [%%s].
