More translations. Unicode stuff.

--- a/strings_en.ini
+++ b/strings_en.ini
@@ -8,6 +8,10 @@ enter_user_id=Enter client user ID:
 password_or_pin_if_you_want_to_store_data=If you want to store the data you can enter a password or PIN code that is used to encrypt your credentials. Leave blank to skip this step.
 enter_password=Enter password (at least 6 characters): 
 enter_password_2=Enter password: 
+account_number=Account number
+account_name=Account name
+bank_balance=Bank balance
+book_balance=Book balance
 help_description=
     teller lets you do banking on the command-line.
 
