--- a/strings_no.ini
+++ b/strings_no.ini
@@ -8,4 +8,7 @@ enter_user_id=Skriv inn bruker-ID og trykk <enter>:
 password_or_pin_if_you_want_to_store_data=Hvis du ønsker å lagre disse dataene kan du skrive inn  et passord som brukes til å kryptere innloggingsinformasjon. La det stå tomt for å ikke lagre noe.
 enter_password=Skriv inn passord og trykk <enter> (minst 6 tegn): 
 enter_password_2=Skriv inn passord og trykk <enter>: 
-
+account_number=Kontonummer
+account_name=Kontonnavn
+bank_balance=Tilgjengelig balanse
+book_balance=Bokført balanse
