Some minor fixes and tweaking.

--- a/strings_en.ini
+++ b/strings_en.ini
@@ -16,8 +16,9 @@ help_description=
     teller lets you do banking on the command-line.
 
     Commands:
-    \tteller                                                       List accounts.
-    \tteller transfer <#|name|no> <#|name|no> <amount> [message]   Transfer from account to account with amount and message.
+    \tteller                                                                        List accounts.
+    \tteller trans[actions] <#|name|no> [index] [length] [start date] [end date]    List transactions for a given account
+    \tteller transfer <#|name|no> <#|name|no> <amount> [message]                    Transfer from account to account with amount and message.
 
     Options:
     \t-h --help                      Show this text.
