--- a/strings_no.ini
+++ b/strings_no.ini
@@ -10,5 +10,5 @@ enter_password=Skriv inn passord og trykk <enter> (minst 6 tegn):
 enter_password_2=Skriv inn passord og trykk <enter>: 
 account_number=Kontonummer
 account_name=Kontonnavn
-bank_balance=Tilgjengelig balanse
+bank_balance=Tilgj. balanse
 book_balance=Bokført balanse
