--- a/strings_no.ini
+++ b/strings_no.ini
@@ -12,3 +12,4 @@ account_number=Kontonummer
 account_name=Kontonnavn
 bank_balance=Tilgj. balanse
 book_balance=Bokført balanse
+please_wait=Vennligst vent...
