--- a/strings_en.ini
+++ b/strings_en.ini
@@ -12,12 +12,13 @@ account_number=Account number
 account_name=Account name
 bank_balance=Bank balance
 book_balance=Book balance
+please_wait=Please wait...
 help_description=
     teller lets you do banking on the command-line.
 
     Commands:
     \tteller                                                                        List accounts.
-    \tteller trans[actions] <#|name|no> [index] [length] [start date] [end date]    List transactions for a given account
+    \tteller trans[actions] <#|name|no> [index [length]] [start date] [end date]    List transactions for a given account
     \tteller transfer <#|name|no> <#|name|no> <amount> [message]                    Transfer from account to account with amount and message.
 
     Options:
