Started using argsparse instead of manual args parsing.

--- a/strings_en.ini
+++ b/strings_en.ini
@@ -13,6 +13,10 @@ account_name=Account name
 bank_balance=Bank balance
 book_balance=Book balance
 please_wait=Please wait...
+args_help_verbose=Show more details.
+args_help_version=Show version information.
+args_help_anonymize=Hide account number, balances, etc.
+args_help_language=Set the language.
 help_description=
     teller lets you do banking on the command-line.
 
