--- a/strings_no.ini
+++ b/strings_no.ini
@@ -13,3 +13,7 @@ account_name=Kontonnavn
 bank_balance=Tilgj. balanse
 book_balance=Bokført balanse
 please_wait=Vennligst vent...
+args_help_verbose=Vis mer detaljer.
+args_help_version=Vis versjons-informasjon.
+args_help_anonymize=Skjul kontonumre, balanser og annen informasjon.
+args_help_language=Sett språket.
