It's now possible to transfer between own accounts.

--- a/strings_en.ini
+++ b/strings_en.ini
@@ -17,19 +17,15 @@ args_help_verbose=Show more details.
 args_help_version=Show version information.
 args_help_anonymize=Hide account number, balances, etc.
 args_help_language=Set the language.
-help_description=
-    teller lets you do banking on the command-line.
-
-    Commands:
-    \tteller                                                                        List accounts.
-    \tteller trans[actions] <#|name|no> [index [length]] [start date] [end date]    List transactions for a given account
-    \tteller transfer <#|name|no> <#|name|no> <amount> [message]                    Transfer from account to account with amount and message.
-
-    Options:
-    \t-h --help                      Show this text.
-    \t-v --version                   Show version.
-    \t-l=<lang> --lang=<lang>        Change language.
-    \t-a --anon[ymize]               Replace all account numbers and balances. 
-    \t
+args_help_from_account=Account number, name or position.
+args_help_to_account=Account number, name or position.
+args_help_amount=Amount to transfer.
+args_help_message=Optional message for the transaction.
+args_help=Show this help message and exit.
 error_specify_language=Error: You need to specify which language to use.
 error_failed_to_authenticate=Error: Failed to authenticate. Got back error code [%%s] and message [%%s].
+error_unknown_account=Error: Unknown account %%s.
+error_from_and_to_account_cannot_be_the_same=Error: From and to account not be the same.
+error_transfer_failed=Error: Transfer failed. Got back error code [%%s] and message [%%s].
+error_transfer_failed_2=Error: Transfer failed. Got back error message [%%s].
+transfer_successful=Transfer was successful.
