--- a/strings_no.ini
+++ b/strings_no.ini
@@ -17,3 +17,8 @@ args_help_verbose=Vis mer detaljer.
 args_help_version=Vis versjons-informasjon.
 args_help_anonymize=Skjul kontonumre, balanser og annen informasjon.
 args_help_language=Sett språket.
+args_help_from_account=Kontonummer, -navn eller -posisjon.
+args_help_to_account=Kontonummer, -navn eller -posisjon.
+args_help_amount=Beløp å overføre.
+args_help_message=Valgfri melding for overførselen.
+args_help=Vis denne meldingen og avslutt.
