Improved currency printing and anonymizing.

--- a/strings_en.ini
+++ b/strings_en.ini
@@ -1,4 +1,5 @@
 [language]
+locale=en_US
 first_run_message=Hi there! 😀 🏦 
     Let's get started! To use this command-line interface teller you need to create an application at https://sbanken.no/utviklerportalen and add the details here.
 welcome_back=Hi there! 😀 🏦 
@@ -28,4 +29,5 @@ error_unknown_account=Error: Unknown account %%s.
 error_from_and_to_account_cannot_be_the_same=Error: From and to account not be the same.
 error_transfer_failed=Error: Transfer failed. Got back error code [%%s] and message [%%s].
 error_transfer_failed_2=Error: Transfer failed. Got back error message [%%s].
-transfer_successful=Transfer was successful.
+transfer_successful=Transfer of %%s between accounts %%s and %%s was successful.
+currency_symbol=NOK
