--- a/strings_no.ini
+++ b/strings_no.ini
@@ -1,4 +1,5 @@
 [language]
+locale=no_no
 first_run_message=Hei der! 😀 🏦 
     La oss starte! For å bruke denne kommando-linje-bankfusjonæren må du opprette en applikasjon på https://sbanken.no/utviklerportalen og legge til dataene her.
 welcome_back=Hei der! 😀 🏦 
@@ -22,3 +23,11 @@ args_help_to_account=Kontonummer, -navn eller -posisjon.
 args_help_amount=Beløp å overføre.
 args_help_message=Valgfri melding for overførselen.
 args_help=Vis denne meldingen og avslutt.
+error_specify_language=Feil: Du må spesifisere hvilket språk som skal brukes.
+error_failed_to_authenticate=Feil: Autentisering feilet. Fikk tilbake feilkode [%%s] og melding [%%s].
+error_unknown_account=Feil: Ukjent konto %%s.
+error_from_and_to_account_cannot_be_the_same=Feil: Fra- og til-konto kan ikke være den samme.
+error_transfer_failed=Feil: Overføring feilet. Fikk tilbake feilkode [%%s] og melding [%%s].
+error_transfer_failed_2=Feil: Overføring feilet. Fikk tilbake melding [%%s].
+transfer_successful=Overføring på %%s mellom kontoene %%s og %%s er fullført.
+currency_symbol=kr
