Added support for listing transactions. Added coloured error messages.

--- a/strings_en.ini
+++ b/strings_en.ini
@@ -2,7 +2,6 @@
 locale=en_US
 first_run_message=Hi there! 😀 🏦 
     Let's get started! To use this command-line interface teller you need to create an application at https://sbanken.no/utviklerportalen and add the details here.
-welcome_back=Hi there! 😀 🏦 
 enter_client_id=Enter client ID: 
 enter_client_secret=Enter client secret: 
 enter_user_id=Enter client user ID: 
@@ -28,6 +27,27 @@ error_failed_to_authenticate=Error: Failed to authenticate. Got back error code 
 error_unknown_account=Error: Unknown account %%s.
 error_from_and_to_account_cannot_be_the_same=Error: From and to account not be the same.
 error_transfer_failed=Error: Transfer failed. Got back error code [%%s] and message [%%s].
-error_transfer_failed_2=Error: Transfer failed. Got back error message [%%s].
+error_transfer_failed_2=Error: Transfer failed. Got back following error message: %%s
 transfer_successful=Transfer of %%s between accounts %%s and %%s was successful.
 currency_symbol=NOK
+date_format=%%m/%%d/%%Y
+transactions_for=Showing %%s transactions for %%s (%%s):
+accounting_date=Acc. date
+interest_date=Int. date
+text=Text
+amount=Amount
+type=Type
+transfer=Transfer
+purchase=Purchase
+error_transactions_listing_failed_2=error_transfer_failed_2=Error: Transaction listing failed. Got back following error message: %%s
+incoming_transaction=%%s incoming transaction
+outgoing_transaction=%%s outgoing transaction
+total_transaction=%%s total transaction
+incoming_transactions=%%s incoming transactions
+outgoing_transactions=%%s outgoing transactions
+total_transactions=%%s total transactions
+searching_transactions_for=Searching for "%%s" in transactions for %%s (%%s):
+got_x_elements_of_y_available=NOTE: Got %%s transactions of %%s available for given period. Use the index parameter to page through all results.
+error_failed_to_decrypt_token=Error: Failed to decrypt data. Did you enter the correct password?
+using_start_date_and_end_date=Using start date %%s and end date %%s.
+using_start_date=Using start date %%s.
