--- a/strings_no.ini
+++ b/strings_no.ini
@@ -2,7 +2,6 @@
 locale=no_no
 first_run_message=Hei der! 😀 🏦 
     La oss starte! For å bruke denne kommando-linje-bankfusjonæren må du opprette en applikasjon på https://sbanken.no/utviklerportalen og legge til dataene her.
-welcome_back=Hei der! 😀 🏦 
 enter_client_id=Skriv inn klient-ID og trykk <enter>: 
 enter_client_secret=Skriv inn klient-hemmelighet og trykk <enter>: 
 enter_user_id=Skriv inn bruker-ID og trykk <enter>: 
@@ -28,6 +27,22 @@ error_failed_to_authenticate=Feil: Autentisering feilet. Fikk tilbake feilkode [
 error_unknown_account=Feil: Ukjent konto %%s.
 error_from_and_to_account_cannot_be_the_same=Feil: Fra- og til-konto kan ikke være den samme.
 error_transfer_failed=Feil: Overføring feilet. Fikk tilbake feilkode [%%s] og melding [%%s].
-error_transfer_failed_2=Feil: Overføring feilet. Fikk tilbake melding [%%s].
+error_transfer_failed_2=Feil: Overføring feilet. Fikk tilbake følgende feilmelding: %%s
 transfer_successful=Overføring på %%s mellom kontoene %%s og %%s er fullført.
 currency_symbol=kr
+date_format=%%d.%%m.%%Y
+transactions_for=Viser %%s transaksjoner for %%s (%%s):
+accounting_date=Bokf. dato
+interest_date=Rentedato
+text=Tekst
+amount=Beløp
+type=Type
+transfer=Overføring
+purchase=Varekjøp
+error_transactions_listing_failed_2=Feil: Utlisting av transaksjoner feilet. Fikk tilbake følgende feilmelding: %%s
+incoming_transaction=%%s inngående transaksjon
+outgoing_transaction=%%s utgående transaksjon
+total_transaction=%%s transaksjon totalt
+incoming_transactions=%%s inngående transaksjoner
+outgoing_transactions=%%s utgående transaksjoner
+total_transactions=%%s transaksjoner totalt
