--- a/strings_en.ini
+++ b/strings_en.ini
@@ -51,3 +51,4 @@ got_x_elements_of_y_available=NOTE: Got %%s transactions of %%s available for gi
 error_failed_to_decrypt_token=Error: Failed to decrypt data. Did you enter the correct password?
 using_start_date_and_end_date=Using start date %%s and end date %%s.
 using_start_date=Using start date %%s.
+short_help_description=Type 'teller --help' for a list of all available commands.
