--- a/strings_no.ini
+++ b/strings_no.ini
@@ -46,3 +46,9 @@ total_transaction=%%s transaksjon totalt
 incoming_transactions=%%s inngående transaksjoner
 outgoing_transactions=%%s utgående transaksjoner
 total_transactions=%%s transaksjoner totalt
+searching_transactions_for=Søker etter "%%s" i transaksjoner for kontoen %%s (%%s):
+got_x_elements_of_y_available=NB: Mottok %%s transaksjoner av %%s tilgjengelige for angitt tidsperiode. Bruk indeks-parameteren for å gå gjennom alle resultatene.
+error_failed_to_decrypt_token=Feil: Klarte ikke å dekryptere dataene. Skrev du inn korrekt passord?
+using_start_date_and_end_date=Bruker startdato %%s og sluttdato %%s.
+using_start_date=Bruker startdato %%s.
+short_help_description=Skriv 'teller --help' for en liste av alle tilgjengelige kommandoer.
