WIP with lotsa nice stuff. Added table/row/column for easier creation of UI.

--- a/strings_v2_en.ini
+++ b/strings_v2_en.ini
@@ -1,5 +1,7 @@
 [language]
 locale=en_US
+cards=Cards
+date_format_expiry=%%m%/%y
 help_exit=Exits the application.
 good_bye=Good bye! :)
 args_help_verbose=Show more details.
@@ -20,3 +22,7 @@ invalid_client_id=Invalid client ID
 invalid_client_secret=Invalid client secret
 invalid_user_id=Invalid user ID
 connecting_to_the_bank=Connecting to the bank...
+help_whoami=Get information about your own user.
+owner_you=You
+kid_number=Customer Identification Number
+
