--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -1,2 +1,80 @@
 [language]
 locale=no_no
+first_run_message=Hei der! 😀 🏦 
+    La oss starte! For å bruke denne kommando-linje-bankfusjonæren må du opprette en applikasjon på https://sbanken.no/utviklerportalen og legge til dataene her.
+enter_client_id=Skriv inn klient-ID og trykk <enter>: 
+enter_client_secret=Skriv inn klient-hemmelighet og trykk <enter>: 
+enter_user_id=Skriv inn bruker-ID og trykk <enter>: 
+password_or_pin_if_you_want_to_store_data=Hvis du ønsker å lagre disse dataene kan du skrive inn  et passord som brukes til å kryptere innloggingsinformasjon. La det stå tomt for å ikke lagre noe.
+enter_password=Skriv inn passord og trykk <enter> (minst 6 tegn): 
+enter_password_2=Skriv inn passord og trykk <enter>: 
+account_number=Kontonummer
+account_name=Kontonnavn
+bank_balance=Tilgj. balanse
+book_balance=Bokført balanse
+please_wait=Vennligst vent...
+args_help_verbose=Vis mer detaljer.
+args_help_version=Vis versjons-informasjon.
+args_help_anonymize=Skjul kontonumre, balanser og annen informasjon.
+args_help_language=Sett språket.
+args_help_from_account=Kontonummer, -navn eller -posisjon.
+args_help_to_account=Kontonummer, -navn eller -posisjon.
+args_help_amount=Beløp å overføre.
+args_help_message=Valgfri melding for overførselen.
+args_help=Vis denne meldingen og avslutt.
+error_specify_language=Feil: Du må spesifisere hvilket språk som skal brukes.
+error_failed_to_authenticate=Feil: Autentisering feilet. Fikk tilbake feilkode [%%s] og melding [%%s].
+error_unknown_account=Feil: Ukjent konto %%s.
+error_from_and_to_account_cannot_be_the_same=Feil: Fra- og til-konto kan ikke være den samme.
+error_transfer_failed=Feil: Overføring feilet. Fikk tilbake feilkode [%%s] og melding [%%s].
+error_transfer_failed_2=Feil: Overføring feilet. Fikk tilbake følgende feilmelding: %%s
+transfer_successful=Overføring på %%s mellom kontoene %%s og %%s er fullført.
+currency_symbol=kr
+date_format=%%d.%%m.%%Y
+date_format_expiry=%%b %%Y
+transactions_for=Viser %%s transaksjoner for %%s (%%s):
+accounting_date=Bokf. dato
+interest_date=Rentedato
+text=Tekst
+amount=Beløp
+type=Type
+transfer=Overføring
+purchase=Varekjøp
+error_transactions_listing_failed=Feil: Utlisting av transaksjoner feilet. Fikk tilbake følgende feilmelding: %%s
+incoming_transaction=%%s inngående transaksjon
+outgoing_transaction=%%s utgående transaksjon
+total_transaction=%%s transaksjon totalt
+incoming_transactions=%%s inngående transaksjoner
+outgoing_transactions=%%s utgående transaksjoner
+total_transactions=%%s transaksjoner totalt
+searching_transactions_for=Søker etter "%%s" i transaksjoner for kontoen %%s (%%s):
+got_x_elements_of_y_available=NB: Mottok %%s transaksjoner av %%s tilgjengelige for angitt tidsperiode. Bruk indeks-parameteren for å gå gjennom alle resultatene.
+error_failed_to_decrypt_token=Feil: Klarte ikke å dekryptere dataene. Skrev du inn korrekt passord?
+using_start_date_and_end_date=Bruker startdato %%s og sluttdato %%s.
+using_start_date=Bruker startdato %%s.
+short_help_description=Skriv 'teller --help' for en liste av alle tilgjengelige kommandoer.
+cards=Kort
+owner_you=Deg
+card_number=Kortnummer
+expiry_date=Utløpsdato
+card_type=Type
+card_owner=Eier
+status=Status
+debit=Debit
+credit=Kreditt
+active=Aktivt
+deleted=Sperret
+efaktura=eFaktura
+processed=Utført
+new=Ny
+due_date=Forfallsdato
+recipient=Mottaker
+efaktura_with_avtalegiro=eFaktura med AvtaleGiro
+efaktura_type=Type
+due_payments=Forfall
+standing_orders=Faste overføringer
+kid_number=KID-nummer
+no_funds=Ikke dekning
+loan=Lån
+invoice=Faktura
+avtalegiro=AvtaleGiro
