Fixed dependencies. Improved transactions support. Translations.

--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -78,3 +78,8 @@ no_funds=Ikke dekning
 loan=Lån
 invoice=Faktura
 avtalegiro=AvtaleGiro
+transfer_VARER=Varekjøp
+transfer_OVFNETTB=Overføring nettbank
+transfer_StraksOvf=Straksoverføring
+transfer_VPAPIR=Verdipapir
+transfer_LØNN=Lønn
