--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 # Requirements file for pip install
-requests==2.21.0
-pycryptodomex==3.8.0
-python_dateutil==2.6.1
+requests==2.25.1
+pycryptodome==3.9.9
+python_dateutil==2.8.1
