Made it possible to print raw network/json data.

--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -14,6 +14,7 @@ bank_balance=Tilgj. balanse
 book_balance=Bokført balanse
 please_wait=Vennligst vent...
 args_help_verbose=Vis mer detaljer.
+args_help_raw=Viser rådata fra nettverkskall.
 args_help_version=Vis versjons-informasjon.
 args_help_anonymize=Skjul kontonumre, balanser og annen informasjon.
 args_help_language=Sett språket.
@@ -65,11 +66,8 @@ credit=Kreditt
 active=Aktivt
 deleted=Sperret
 efaktura=eFaktura
-processed=Utført
-new=Ny
 due_date=Forfallsdato
 recipient=Mottaker
-efaktura_with_avtalegiro=eFaktura med AvtaleGiro
 efaktura_type=Type
 due_payments=Forfall
 standing_orders=Faste overføringer
@@ -83,3 +81,10 @@ transfer_OVFNETTB=Overføring nettbank
 transfer_StraksOvf=Straksoverføring
 transfer_VPAPIR=Verdipapir
 transfer_LØNN=Lønn
+doc_header=Tilgjengelige kommandoer
+efaktura_status_processed=Utført
+efaktura_status_new=Ny
+efaktura_type_=eFaktura med AvtaleGiro
+efaktura_type_INVOICE_WITH_AVTALEGIRO=AvtaleGiro
+efaktura_type_INVOICE=eFaktura
+
