Table improvements. Added footer row type. Added summary to transactions. More demo data. More transactions types. Improved dictionary.

--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -50,7 +50,7 @@ outgoing_transactions=%%s utgående transaksjoner
 total_transactions=%%s transaksjoner totalt
 searching_transactions_for=Søker etter "%%s" i transaksjoner for kontoen %%s (%%s):
 got_x_elements_of_y_available=NB: Mottok %%s transaksjoner av %%s tilgjengelige for angitt tidsperiode. Bruk indeks-parameteren for å gå gjennom alle resultatene.
-error_failed_to_decrypt_token=Feil: Klarte ikke å dekryptere dataene. Skrev du inn korrekt passord?
+error_failed_to_decrypt_token=Feil: Klarte ikke å dekryptere dataene. Skrev du inn riktig passord?
 using_start_date_and_end_date=Bruker startdato %%s og sluttdato %%s.
 using_start_date=Bruker startdato %%s.
 short_help_description=Skriv 'teller --help' for en liste av alle tilgjengelige kommandoer.
@@ -76,15 +76,17 @@ no_funds=Ikke dekning
 loan=Lån
 invoice=Faktura
 avtalegiro=AvtaleGiro
-transfer_VARER=Varekjøp
-transfer_OVFNETTB=Overføring nettbank
-transfer_StraksOvf=Straksoverføring
-transfer_VPAPIR=Verdipapir
-transfer_LØNN=Lønn
+transaction_VARER=Varekjøp
+transaction_OVFNETTB=Overføring nettbank
+transaction_StraksOvf=Straksoverføring
+transaction_VPAPIR=Verdipapir
+transaction_LØNN=Lønn
+transaction_NETTGIRO=Nettgiro
+transaction_OVERFØRT=Overført
 doc_header=Tilgjengelige kommandoer
 efaktura_status_processed=Utført
 efaktura_status_new=Ny
 efaktura_type_=eFaktura med AvtaleGiro
 efaktura_type_INVOICE_WITH_AVTALEGIRO=AvtaleGiro
 efaktura_type_INVOICE=eFaktura
-
+initial_help=Bruk "cd <kontonavn/-nr/eFaktura/Forfall/Kort/Faste overføringer>".\nBruk <tab> for å fullføre kommandoer og navn.
