Added total on balances.

--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -90,3 +90,5 @@ efaktura_type_=eFaktura med AvtaleGiro
 efaktura_type_INVOICE_WITH_AVTALEGIRO=AvtaleGiro
 efaktura_type_INVOICE=eFaktura
 initial_help=Bruk "cd <kontonavn/-nr/eFaktura/Forfall/Kort/Faste overføringer>".\nBruk <tab> for å fullføre kommandoer og navn.
+connecting_to_the_bank=Kobler til banken...
+total=Totalt
