Added standing orders. Addes some summing. Added user-agent.

--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -92,3 +92,6 @@ efaktura_type_INVOICE=eFaktura
 initial_help=Bruk "cd <kontonavn/-nr/eFaktura/Forfall/Kort/Faste overføringer>".\nBruk <tab> for å fullføre kommandoer og navn.
 connecting_to_the_bank=Kobler til banken...
 total=Totalt
+next_due_date=Neste forfallsdato
+Monthly=Månedlig
+frequency=Frekvens
