Moved colours and table to separate files. Fixed so that exit aliases actually exits. Ctrl + c now clears line instead of exiting the application. Ctrl + d (EOF) now exits the application.

--- a/strings_v2_en.ini
+++ b/strings_v2_en.ini
@@ -3,7 +3,7 @@ locale=en_US
 cards=Cards
 date_format_expiry=%%m%/%y
 help_exit=Exits the application.
-good_bye=Good bye! :)
+good_bye=See you! 👋\n
 args_help_verbose=Show more details.
 args_help_version=Show version information.
 args_help_anonymize=Hide account number, balances, etc.
@@ -25,4 +25,3 @@ connecting_to_the_bank=Connecting to the bank...
 help_whoami=Get information about your own user.
 owner_you=You
 kid_number=Customer Identification Number
-
