--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -4,7 +4,7 @@ first_run_message=Hei der! 😀 🏦
     La oss starte! For å bruke denne kommando-linje-bankfusjonæren må du opprette en applikasjon på https://sbanken.no/utviklerportalen og legge til dataene her.
 enter_client_id=Skriv inn klient-ID og trykk <enter>: 
 enter_client_secret=Skriv inn klient-hemmelighet og trykk <enter>: 
-enter_user_id=Skriv inn bruker-ID og trykk <enter>: 
+enter_user_id=Skriv inn bruker-ID (fødselsnummer) og trykk <enter>: 
 password_or_pin_if_you_want_to_store_data=Hvis du ønsker å lagre disse dataene kan du skrive inn  et passord som brukes til å kryptere innloggingsinformasjon. La det stå tomt for å ikke lagre noe.
 enter_password=Skriv inn passord og trykk <enter> (minst 6 tegn): 
 enter_password_2=Skriv inn passord og trykk <enter>: 
@@ -96,3 +96,6 @@ next_due_date=Neste forfallsdato
 Monthly=Månedlig
 frequency=Frekvens
 balance_after=Balanse etter
+unknown_destination=Ukjent destinasjon
+exit_help=Skriv "exit" eller trykk <ctrl + d> for å avslutte.
+good_bye=Vi sees! 👋\n
