Added network error handling. Started mv command. Code format.

--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -99,3 +99,6 @@ balance_after=Balanse etter
 unknown_destination=Ukjent destinasjon
 exit_help=Skriv "exit" eller trykk <ctrl + d> for å avslutte.
 good_bye=Vi sees! 👋\n
+mv_invalid_arguments_no_account_selected=Forsto ikke kommandoen. Skriv "mv <fra konto> <til konto> <beløp> (<evt. melding>)"
+mv_invalid_arguments_account_selected=Forsto ikke kommandoen. Skriv "mv <til konto> <beløp> (<evt. melding>)"
+error_network=Nettverksfeil. Sjekk tilkoblingen din og prøv igjen. Detaljer: %%s
