--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -1,9 +1,9 @@
 [language]
 locale=no_no
 first_run_message=Hei der! 😀 🏦 
-    La oss starte! For å bruke denne kommando-linje-bankfusjonæren må du opprette en applikasjon på https://sbanken.no/utviklerportalen og legge til dataene her.
-enter_client_id=Skriv inn klient-ID og trykk <enter>: 
-enter_client_secret=Skriv inn klient-hemmelighet og trykk <enter>: 
+    La oss starte! For å bruke denne kommandolinje-bankfusjonæren må du opprette en applikasjon på https://sbanken.no/utviklerportalen og legge til dataene her.
+enter_client_id=Skriv inn klient-ID (applikasjonsnøkkel) og trykk <enter>: 
+enter_client_secret=Skriv inn klient-hemmelighet (passord) og trykk <enter>: 
 enter_user_id=Skriv inn bruker-ID (fødselsnummer) og trykk <enter>: 
 password_or_pin_if_you_want_to_store_data=Hvis du ønsker å lagre disse dataene kan du skrive inn  et passord som brukes til å kryptere innloggingsinformasjon. La det stå tomt for å ikke lagre noe.
 enter_password=Skriv inn passord og trykk <enter> (minst 6 tegn): 
