Changed to v2 APIs. String improvements. Added start of mailbox reading.

--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -63,7 +63,8 @@ card_owner=Eier
 status=Status
 debit=Debit
 credit=Kreditt
-active=Aktivt
+active=Aktiv
+inactive=Inaktiv
 deleted=Sperret
 efaktura=eFaktura
 due_date=Forfallsdato
@@ -71,6 +72,7 @@ recipient=Mottaker
 efaktura_type=Type
 due_payments=Forfall
 standing_orders=Faste overføringer
+mailbox=Meldingsboks
 kid_number=KID-nummer
 no_funds=Ikke dekning
 loan=Lån
@@ -89,11 +91,12 @@ efaktura_status_new=Ny
 efaktura_type_=eFaktura med AvtaleGiro
 efaktura_type_INVOICE_WITH_AVTALEGIRO=AvtaleGiro
 efaktura_type_INVOICE=eFaktura
-initial_help=Bruk "cd <kontonavn/-nr/eFaktura/Forfall/Kort/Faste overføringer>".\nBruk <tab> for å fullføre kommandoer og navn.
+initial_help=Bruk "cd <kontonavn/-nr/eFaktura/Forfall/Kort/Faste overføringer/Meldingsboks>".\nBruk <tab> for å fullføre kommandoer og navn.
 connecting_to_the_bank=Kobler til banken...
 total=Totalt
 next_due_date=Neste forfallsdato
 Monthly=Månedlig
+Weekly=Ukentlig
 frequency=Frekvens
 balance_after=Balanse etter
 unknown_destination=Ukjent destinasjon
@@ -102,3 +105,7 @@ good_bye=Vi sees! 👋\n
 mv_invalid_arguments_no_account_selected=Forsto ikke kommandoen. Skriv "mv <fra konto> <til konto> <beløp> (<evt. melding>)"
 mv_invalid_arguments_account_selected=Forsto ikke kommandoen. Skriv "mv <til konto> <beløp> (<evt. melding>)"
 error_network=Nettverksfeil. Sjekk tilkoblingen din og prøv igjen. Detaljer: %%s
+date=Dato
+subject=Emne
+unread=Ulest
+read=Lest
