Mailbox handling. Error message improvements.

--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -73,12 +73,15 @@ efaktura_type=Type
 due_payments=Forfall
 standing_orders=Faste overføringer
 mailbox=Meldingsboks
+archive=Arkiv
+mailbox/archive=Meldingsboks/Arkiv
 kid_number=KID-nummer
 no_funds=Ikke dekning
 loan=Lån
 invoice=Faktura
 avtalegiro=AvtaleGiro
 transaction_VARER=Varekjøp
+transaction_VISA VARE=Varekjøp VISA
 transaction_OVFNETTB=Overføring nettbank
 transaction_StraksOvf=Straksoverføring
 transaction_VPAPIR=Verdipapir
@@ -105,6 +108,7 @@ good_bye=Vi sees! 👋\n
 mv_invalid_arguments_no_account_selected=Forsto ikke kommandoen. Skriv "mv <fra konto> <til konto> <beløp> (<evt. melding>)"
 mv_invalid_arguments_account_selected=Forsto ikke kommandoen. Skriv "mv <til konto> <beløp> (<evt. melding>)"
 error_network=Nettverksfeil. Sjekk tilkoblingen din og prøv igjen. Detaljer: %%s
+error_api=Mottok uventet feilmelding fra banken. Detaljer: %%s
 date=Dato
 subject=Emne
 unread=Ulest
