Added support for internal transfers.

--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -105,11 +105,13 @@ balance_after=Balanse etter
 unknown_destination=Ukjent destinasjon
 exit_help=Skriv "exit" eller trykk <ctrl + d> for å avslutte.
 good_bye=Vi sees! 👋\n
-mv_invalid_arguments_no_account_selected=Forsto ikke kommandoen. Skriv "mv <fra konto> <til konto> <beløp> (<evt. melding>)"
-mv_invalid_arguments_account_selected=Forsto ikke kommandoen. Skriv "mv <til konto> <beløp> (<evt. melding>)"
+help_mv=Hvis du er inne på en spesifikk konto du ønsker overføre penger fra:\n"mv <til konto> <beløp> (<evt. melding>)"\nHvis du ikke har valgt konto:\n"mv <fra konto> <til konto> <beløp> (<evt. melding>)"\n\nBruk <tab> for å fullføre kontonavn.\nDu kan bruke kontonavn, kontonummer eller nummeret i listen kontoen har.\n\nEksempler:\n"mv Brukskonto Sparekonto 1000 Ekstra sparing"\n"mv Sparekonto 1000 Ekstra sparing"\n"mv 2 3 1000 Ekstra sparing"
+mv_invalid_arguments_no_account_selected=Forsto ikke kommandoen. Skriv "mv <fra konto> <til konto> <beløp> (<evt. melding>)". Skriv "help mv" for mer hjelp.
+mv_invalid_arguments_account_selected=Forsto ikke kommandoen. Skriv "mv <til konto> <beløp> (<evt. melding>)". Skriv "help mv" for mer hjelp.
 error_network=Nettverksfeil. Sjekk tilkoblingen din og prøv igjen. Detaljer: %%s
 error_api=Mottok uventet feilmelding fra banken. Detaljer: %%s
 date=Dato
 subject=Emne
 unread=Ulest
 read=Lest
+error_failed_to_parse_amount=Feil: Klarte ikke å forstå beløpet (%%s)
