WIP with search. Added some debug. Added handling of missing access token.

--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -115,3 +115,4 @@ subject=Emne
 unread=Ulest
 read=Lest
 error_failed_to_parse_amount=Feil: Klarte ikke å forstå beløpet (%%s)
+help_find=Hvis du er inne på en spesifikk konto å søke på:\n"find <søkeord> (<evt. fra-dato> <evt. til-dato>)"\nHvis du ikke har valgt konto:\n"find <konto> <søkeord> (<evt. fra-dato> <evt. til-dato>)"\n\nBruk <tab> for å fullføre kontonavn.\nDu kan bruke kontonavn, kontonummer eller nummeret i listen kontoen har.\n\nEksempler:\n"find Brukskonto kreditrenter '2021-01-01' '2021-11-25'"\n"find 'google ireland' '1 jan 2021'"
