--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -91,8 +91,7 @@ transaction_OVERFØRT=Overført
 doc_header=Tilgjengelige kommandoer
 efaktura_status_processed=Utført
 efaktura_status_new=Ny
-efaktura_type_=eFaktura med AvtaleGiro
-efaktura_type_INVOICE_WITH_AVTALEGIRO=AvtaleGiro
+efaktura_type_InvoiceWithAvtaleGiro=AvtaleGiro
 efaktura_type_INVOICE=eFaktura
 initial_help=Bruk "cd <kontonavn/-nr/eFaktura/Forfall/Kort/Faste overføringer/Meldingsboks>".\nBruk <tab> for å fullføre kommandoer og navn.
 connecting_to_the_bank=Kobler til banken...
@@ -116,3 +115,5 @@ unread=Ulest
 read=Lest
 error_failed_to_parse_amount=Feil: Klarte ikke å forstå beløpet (%%s)
 help_find=Hvis du er inne på en spesifikk konto å søke på:\n"find <søkeord> (<evt. fra-dato> <evt. til-dato>)"\nHvis du ikke har valgt konto:\n"find <konto> <søkeord> (<evt. fra-dato> <evt. til-dato>)"\n\nBruk <tab> for å fullføre kontonavn.\nDu kan bruke kontonavn, kontonummer eller nummeret i listen kontoen har.\n\nEksempler:\n"find Brukskonto kreditrenter '2021-01-01' '2021-11-25'"\n"find 'google ireland' '1 jan 2021'"
+help_cat=Hvis du er inne i meldingsboksen:\n"cat <meldings-nr 1-X>\n\nEksempel:\n"cat 1"
+cat_only_works_inside_mailbox=Kommandoen kan kun brukes inne i "meldingsboks".\nSkriv "cd meldingsboks". Deretter kan du skrive "dir" for å få en oversikt over meldingene, eller "cat 1" for å lese den første meldingen.
