--- a/strings_v2_no.ini
+++ b/strings_v2_no.ini
@@ -93,7 +93,7 @@ efaktura_status_processed=Utført
 efaktura_status_new=Ny
 efaktura_type_InvoiceWithAvtaleGiro=AvtaleGiro
 efaktura_type_INVOICE=eFaktura
-initial_help=Bruk "cd <kontonavn/-nr/eFaktura/Forfall/Kort/Faste overføringer/Meldingsboks>".\nBruk <tab> for å fullføre kommandoer og navn.
+initial_help=Bruk "cd <kontonavn/-nr/eFaktura/Forfall/Kort/Faste overføringer/Meldingsboks>".\nBruk <tab> for å fullføre kommandoer og navn.\nTilgjengelig kommandoer: cd, dir, cat, mv, whoami, help, exit
 connecting_to_the_bank=Kobler til banken...
 total=Totalt
 next_due_date=Neste forfallsdato
